# CoreBoard-001

./: .gitmodules  ReadMe.md
FW/: ReadMe.md
FW/openwrt-23.05/: Makefile  ReadMe.md  defconfig  local_feeds  local_patch
FW/openwrt-23.05/local_patch.d/: 002-add-linux_spidev-support.diff  003-upgrade-tools-meson.diff
FW/openwrt-24.10/: Makefile  ReadMe.md  defconfig  local_feeds  local_patch
FW/openwrt-24.10/local_patch.d/: 001-add_hyh_coreboard-001_support.diff  002-add-linux_spidev-support.diff
FW/package/: .gitignore  ReadMe.md
FW/package/ExtBoard/: Makefile  ReadMe.md
FW/package/ExtBoard/files/etc/dbus-1/system.d/: ExtBoardD.conf
FW/package/ExtBoard/files/etc/hotplug.d/usb/: 10-ExtBoard
FW/package/ExtBoard/files/etc/init.d/: ExtBoardD
FW/package/ExtBoard/src/: CMakeLists.txt  main.cpp  version.h
FW/package/ExtBoard/src/dbus/: DBusInterface.cpp  DBusInterface.h
FW/package/ExtBoard/src/fs/: banner
FW/package/ExtBoard/src/log/: DeamonLog.cpp  DeamonLog.h
FW/package/ExtBoard/src/tools/: CMakeLists.txt
FW/package/ExtBoard/src/tools/lsExtBoard/: CMakeLists.txt  main.cpp
FW/package/ExtBoard/src/usb/: USB.cpp  USB.h
FW/package/FirstBootInit/: Makefile  ReadMe.md
FW/package/FirstBootInit/files/etc/FirstBootInit/script/: 10rtc  10timezone  10wifi
HW/: ReadMe.md
HW/CoreBoard-001/: CoreBoard-001_2024-04-29.epro  ReadMe.md
